# CraftingInterpreters

./: .gitignore  .scalafmt.conf  build.sbt
cpp/: .clang-format  CMakeLists.txt
cpp/interpreter/: CMakeLists.txt  environment.cc  environment.h  interpreter.cc  interpreter.h  main.cc
fsharp/TestLibrary/: ScannerTest.fs  TestLibrary.fsproj
fsharp/interpreter/: Interpreter.fs
project/: plugins.sbt
rlox/: Cargo.toml
rlox/src/: compile.rs  debug.rs  function.rs  main.rs  memory.rs  native_function.rs  value.rs  vm.rs
rlox/src/chunk/: mod.rs
rlox/src/compiler/: compile.rs  mod.rs  parser.rs  scanner.rs
rlox/src/vm/: class.rs  closure.rs  debug.rs  function.rs  memory.rs  mod.rs  native_function.rs  up_value.rs  value.rs  vm.rs
rlox/test/: closure1.lox
scala/: .scalafmt.conf  build.sbt
scala/ideaPlugin/: Grammar.bnf  LoxLexer.flex  _LoxLexer.flex
scala/ideaPlugin/src/test/testData/: FunctionDeclaration.lox  FunctionDeclaration.txt  VariableDeclarations.lox  VariableDeclarations.txt  WhileStatement.lox  WhileStatement.txt
scala/ideaPlugin/src/test/testData/parser/: FunctionDeclaration.txt  VariableDeclarations.lox  (+1 more)
scala/project/: plugins.sbt
scala/src/grammar/: simple_ambiguous.bnf
scala/testData/interpreter/: inheritance1.lox  inheritance1.txt  super1.lox
scala/testData/parser/: class1.lox  class1.txt  function1.lox  function1.txt  variable1.lox  variable1.txt
scala/webUI/: common.webpack.config.js  dev.webpack.config.js  package-lock.json
scala/webUI/src/main/resources/: index-dev.html  styles.scss
src/: Grammar.bnf
(+61 files in other folders)
